# ghidra-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
ghidra_mcp/: __init__.py  __main__.py  core.py  server.py  utils.py
ghidra_mcp/models/: inputs.py
ghidra_mcp/tools/: annotate.py  data.py  functions.py  search.py  session.py
specs/: architecture.md  pyghidra-patterns.md  tools-annotate.md  tools-data.md  tools-functions.md  tools-session.md
tests/: comprehensive_test.py  smoke_test.py
